Remove personalbar height to fix header height on mobile devices.

--- a/plonetheme/healthlens/theme/healthlens/less/_screen.less
+++ b/plonetheme/healthlens/theme/healthlens/less/_screen.less
@@ -103,7 +103,6 @@ nav.navbar {
 
 #personal-bar {
     position: relative;
-	height: @personal-bar-height;
 	background-color: blue;
 	z-index: 99;
 }
